feat(KSTIP-1426): referenze pia in wohnsitzanteil & remove wohnsitz in kind
