# backend/src/main/java/ch/dvbern/stip/berechnung/dto/v1/AntragsstellerV1.java
@@ -1,5 +1,6 @@
 package ch.dvbern.stip.berechnung.dto.v1;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
@@ -90,7 +91,8 @@ public class AntragsstellerV1 {
                 );
             }
             for (final var kind : gesuchFormular.getKinds()) {
-                if (kind.getWohnsitz() != Wohnsitz.EIGENER_HAUSHALT) {
+                // if child does still live with the parents/ a parent
+                if (kind.getWohnsitzAnteilPia() < 0) {
                     anzahlPersonenImHaushalt += 1;
                     medizinischeGrundversorgung += BerechnungRequestV1.getMedizinischeGrundversorgung(
                         (int) ChronoUnit.YEARS.between(kind.getGeburtsdatum(), LocalDate.now()), gesuchsperiode
