# contract/openapi.yaml
@@ -1141,7 +1141,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GesuchWithChanges'
-          description: Returns 
+          description: Returns
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -1163,7 +1163,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GesuchWithChanges'
-          description: Returns 
+          description: Returns
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -2135,6 +2135,7 @@ components:
         - nachname
         - geburtsdatum
         - ausbildungssituation
+        - wohnsitzAnteilPia
       type: object
       properties:
         vorname:
@@ -2143,18 +2144,12 @@ components:
           format: date
           description: dd.MM.YYYY
           type: string
-        wohnsitz:
-          $ref: '#/components/schemas/Wohnsitz'
         ausbildungssituation:
           $ref: '#/components/schemas/Ausbildungssituation'
         id:
           $ref: '#/components/schemas/UUID'
-        wohnsitzAnteilMutter:
-          description: Required wenn Wohnsitz.MUTTER_VATER.
-          type: number
-        wohnsitzAnteilVater:
-          description: Required wenn Wohnsitz.MUTTER_VATER.
-          type: number
+        wohnsitzAnteilPia:
+          type: integer
         nachname:
           type: string
         erhalteneAlimentebeitraege:
